--- a/package.json
+++ b/package.json
@@ -3,25 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install",
+    "prettier": "prettier",
+    "start": "react-scripts start",
+    "stylelint": "stylelint src",
+    "test": "react-scripts test"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.13.3",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.0",
+    "imagemin-lint-staged": "^0.4.0",
+    "jest-styled-components": "^7.0.5",
+    "lint-staged": "^11.2.3",
+    "prettier": "^2.4.1",
+    "source-map-explorer": "^2.5.2",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^22.0.0"
   },
   "browserslist": {
     "production": [
