--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,7 @@
 {
   "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
   "rules": {
-    "color-hex-length": "long"
+    "color-hex-length": "long",
+    "value-keyword-case": null
   }
 }
