--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "test": "react-scripts test"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.45.0",
